hphp/test/zend/bad/argument_restriction_001.php
<?php
Class Base {
	public function &test($foo, array $bar, $option = NULL, $extra = "lllllllllllllllllllllllllllllllllllllllllllllllllll") {
	}	
}

class Sub extends Base {
	public function &test() {
	}	
}
?>